; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_uip_tcp.c_uip_tcp_write.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_uip_tcp.c_uip_tcp_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uip_tcp_pcb = type { i64 }

@UIP_ESTABLISHED = common dso_local global i64 0, align 8
@UIP_CLOSE_WAIT = common dso_local global i64 0, align 8
@UIP_SYN_SENT = common dso_local global i64 0, align 8
@UIP_SYN_RCVD = common dso_local global i64 0, align 8
@UIP_ERR_OK = common dso_local global i32 0, align 4
@UIP_ERR_CONN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uip_tcp_write(%struct.uip_tcp_pcb* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.uip_tcp_pcb*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.uip_tcp_pcb* %0, %struct.uip_tcp_pcb** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %6, align 8
  %11 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @UIP_ESTABLISHED, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %33, label %15

15:                                               ; preds = %4
  %16 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %6, align 8
  %17 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @UIP_CLOSE_WAIT, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %33, label %21

21:                                               ; preds = %15
  %22 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %6, align 8
  %23 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @UIP_SYN_SENT, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %33, label %27

27:                                               ; preds = %21
  %28 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %6, align 8
  %29 = getelementptr inbounds %struct.uip_tcp_pcb, %struct.uip_tcp_pcb* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @UIP_SYN_RCVD, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %44

33:                                               ; preds = %27, %21, %15, %4
  %34 = load i64, i64* %8, align 8
  %35 = icmp sgt i64 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %33
  %37 = load %struct.uip_tcp_pcb*, %struct.uip_tcp_pcb** %6, align 8
  %38 = load i8*, i8** %7, align 8
  %39 = load i64, i64* %8, align 8
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @uip_tcpenqueue(%struct.uip_tcp_pcb* %37, i8* %38, i64 %39, i32 0, i32 %40, i32* null, i32 0)
  store i32 %41, i32* %5, align 4
  br label %46

42:                                               ; preds = %33
  %43 = load i32, i32* @UIP_ERR_OK, align 4
  store i32 %43, i32* %5, align 4
  br label %46

44:                                               ; preds = %27
  %45 = load i32, i32* @UIP_ERR_CONN, align 4
  store i32 %45, i32* %5, align 4
  br label %46

46:                                               ; preds = %44, %42, %36
  %47 = load i32, i32* %5, align 4
  ret i32 %47
}

declare dso_local i32 @uip_tcpenqueue(%struct.uip_tcp_pcb*, i8*, i64, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
